# BaizeMind

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  pyproject.toml  uv.toml
api/: main.py  schemas.py
api/routes/: auth.py  documents.py  evaluation.py  excel.py  management.py  qa.py
config/: prompts.py  settings.py
data/evaluation/: dataset.json
docs/: FRONTEND_DESIGN.md  KNOWLEDGE_GRAPH_UPGRADE_PLAN.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx
scripts/: build_graph.py  build_graphrag.py  build_lightrag_index.py  debug_evidence.ipynb  debug_evidence.py  debug_evidence_nb.py  diagnose.py  diagnose_retrieval.ipynb  ingest_documents.py  migrate_kg_to_evidence.py  run_evaluation.py  setup_milvus.sh
src/: auth.py  logging_config.py
src/agents/: answer_validator.py  graph_agent.py  query_router.py  retrieval_agent.py  tools.py  workflow.py
src/cache/: __init__.py  base.py  factory.py  garnet.py  memory.py  noop.py  sqlite_backend.py
src/chunker/: context_merger.py  hierarchical_chunker.py  table_chunker.py
src/document_parser/: __init__.py  chart_parser.py  langchain_compat.py  mineru_parser.py  ocr_parser.py  table_parser.py
src/embeddings/: bge_m3.py
src/evaluation/: dataset.py  metrics.py  runner.py
src/excel_rag/: __init__.py  nl2sql.py  parser.py  pipeline.py  qa.py  store.py  summarizer.py  vector_store.py
tests/: test_agents.py  test_chunker.py  test_evidence.py  test_evidence_pipeline.py  test_graph.py  test_parser.py  test_retrieval.py
(+63 files in other folders)
