[project]
name = "agentic-graphrag"
version = "0.1.0"
description = "Agentic-GraphRAG: 多模态文档解析 + 知识图谱 + Hybrid RAG + Agent 推理的企业知识问答系统"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "mineru[pipeline]>=2.0.0",
    "paddleocr[doc-parser]>=3.4.0",
    "modelscope>=1.35.0",
    "FlagEmbedding>=1.3.0",
    "pymilvus>=2.4.0",
    "neo4j>=5.27.0",
    "rank-bm25>=0.2.2",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "langextract>=1.5.0",
    "graphrag>=2.0.0",
    "httpx>=0.27.0",
    "aiofiles>=24.0.0",
    "scikit-learn>=1.5.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "sse-starlette>=2.0.0",
    "ragas>=0.2.0",
    "datasets>=3.0.0",
    "langchain-google-vertexai>=3.2.4",
]

[dependency-groups]
dev = ["pytest>=9.0.0"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
